# regex-click-python

./: .gitignore  CLAUDE.md  fake_target.py  hello.py  main.py  pyproject.toml  run.bat  test_e2e.py  test_integration.py  test_main.py
